--- a/IDIAP EE559 Deep Learning/EE559_–_Practical_Session_1.ipynb
+++ b/IDIAP EE559 Deep Learning/EE559_–_Practical_Session_1.ipynb
@@ -33,7 +33,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "fdsfsdgsdgdsgs"
       ],
       "execution_count": 0,
       "outputs": []
